--- a/css/style.css
+++ b/css/style.css
@@ -883,15 +883,52 @@ ul.inbox-pagination li {
  	min-height: 20px;
  }
  
+ /*****************  Rooms Calendar *************/
  
  
+.rooms-calendar {
+ 	font-size: 12px;
+ }
  
+.rooms-calendar .status-bar {
+ 	padding: 4px;
+ 	background-color: #E6E6E6;
+ }
  
+.rooms-calendar .month-name {
+ 	border-bottom: 1px solid #9d9d9d;
+ 	padding: 4px;
+ 	background-color: #f5f5f5;
+ }
  
+.rooms-calendar .days-box {
+}
  
+.rooms-calendar .days-box .row-week-day-header {
+	
+}
+
+.rooms-calendar .days-box .row-week-day-header .week-day {
+ 	width: 14.285714%;
+ 	float: left;
+ 	display: block;
+ 	position: relative;
+ 	border: 1px solid #E4E4E4;
+}
  
+.rooms-calendar .days-box .row-week-day-header .week-day p {
+ 	margin: 0;
+}
  
- 
+.rooms-calendar .days-box .row-week-day .week-day {
+ 	width: 14.285714%;
+ 	float: left;
+ 	display: block;
+ 	position: relative;
+ 	border: 1px solid #E4E4E4;
+ 	min-height: 25px;
+}
+
  
  
  
