--- a/css/style.css
+++ b/css/style.css
@@ -895,6 +895,10 @@ ul.inbox-pagination li {
  	background-color: #E6E6E6;
  }
  
+ .rooms-calendar .status-bar a {
+ 	margin-left: 14px;
+ }
+ 
 .rooms-calendar .month-name {
  	border-bottom: 1px solid #9d9d9d;
  	padding: 4px;
