change reservation room

--- a/css/style.css
+++ b/css/style.css
@@ -1074,7 +1074,10 @@ ul.inbox-pagination li {
 	text-decoration: line-through;
 }
 
- 
+.pending-highlight {
+	color: #f56260!important;
+	text-transform: uppercase;
+} 
  
  
  
