most of the change dates and room

--- a/css/style.css
+++ b/css/style.css
@@ -968,6 +968,11 @@ ul.inbox-pagination li {
  	min-height: 20px;
  }
  
+.memberReservations .updateRoom {
+	padding: 3px 6px;
+	font-size: 10px;
+} 
+ 
  /*****************  Rooms Calendar week *************/
  
  
